[package]
name = "rit"
version = "0.1.0"
authors = ["Sean Klein <seanmarionklein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
chrono = "0.4.19"
clap = "2.33"
flate2 = "1.0.19"
hex = "0.3.1"
sha-1 = "0.9.2"

[dev-dependencies]
tempdir = "0.3.7"
# directory_compare = { path = "../directory_compare" }
directory_compare = "0.1.4"
# test_process_executor = { path = "../test_process_executor" }
test_process_executor = "0.1.0"
